Fix the topics, consumers and producer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ user.topic.group.id=group_id
 
 spring.profiles.active=dev
 #postgres
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= update
 spring.datasource.url= jdbc:postgresql://localhost:5432/test_kafka
 spring.datasource.username= postgres
 spring.datasource.password= root2020
