Updating consumer and producer with docker

--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.3.2.RELEASE</version>
             </plugin>
         </plugins>
+        <finalName>spring-kafka</finalName>
     </build>
-
 </project>
