--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,30 @@
 version: '3.3'
 services:
+  db:
+    image: "postgres"
+    ports:
+      - "5431:5432"
+    environment:
+      POSTGRES_DB: tc
+      POSTGRES_USER: tc
+      POSTGRES_PASSWORD: tc
+  app:
+     build: .
+     ports:
+       - "9000:8080"
+     environment:
+        SPRING_DATASOURCE_URL: jdbc:postgresql://db/tc
+        SPRING_DATASOURCE_USERNAME: tc
+        SPRING_DATASOURCE_PASSWORD: tc
+     depends_on:
+        - db
   zookeeper:
     image: confluentinc/cp-zookeeper:5.2.1
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_SYNC_LIMIT: 2
+      ALLOW_ANONYMOUS_LOGIN: yes
   kafka:
     image: confluentinc/cp-kafka:5.2.1
     ports:
