--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,16 +10,16 @@ user.topic.group.id=group_id
 
 spring.profiles.active=dev
 #postgres
-spring.jpa.hibernate.ddl-auto= update
-spring.datasource.url= jdbc:postgresql://localhost:5432/test_kafka
-spring.datasource.username= postgres
-spring.datasource.password= root2020
+spring.jpa.hibernate.ddl-auto= create
+spring.datasource.url= jdbc:postgresql://localhost:5431/tc
+spring.datasource.username= tc
+spring.datasource.password= tc
 spring.datasource.driver-class-name= org.postgresql.Driver
 spring.jpa.show-sql= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQL81Dialect
 #spring.jpa.properties.hibernate.dialect= com.ceptinel.micro.chart.models.CustomPostgreSQLDialect
 
-security.basic.enable: false
+security.basic.enable: true
 
 # shows the commands
 spring.jpa.properties.hibernate.show_sql=true
